--- a/hack/estilox.css
+++ b/hack/estilox.css
@@ -1,14 +1,27 @@
 body {
     background-image: url("../fm/FONDO-2L.jpg");
-    background-size: contain;
+    background-size: cover;
     background-color: #000;
     font-family: monospace;
     font-weight: 500;
     color: #fefefe;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
-#Vid {
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 10%;
+.responsive {
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    position: relative; 
+}
+
+.responsive iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#brk {
+    margin-top: 100px;
 }
